# git-rg

./: .gitignore  README.md  git_rg.py  pyproject.toml
