[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "git-rg"
description = "A utility for recursively searching for files in .git directories using regex."
authors = [{ name = "s3rgeym" }]
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "git_rg.__version__" }

[project.scripts]
git-rg = "git_rg:main"
